fix: instock status not showing on PDP
+ fix: images being cropped

--- a/src/assets/scss/components/ItemCard.scss
+++ b/src/assets/scss/components/ItemCard.scss
@@ -8,24 +8,6 @@
   .add-to-cart-btn {
     display: none;
   }
-
-  .img-overlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-  }
-
-  .img-overlay::before {
-    content: "OUT OF STOCK";
-    width: 100% !important;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2rem;
-    font-weight: lighter;
-  }
 }
 
 .itemcard {
@@ -37,7 +19,7 @@
   img {
     width: 100%;
     aspect-ratio: 1;
-    object-fit: cover;
+    object-fit: contain;
     margin-bottom: 1rem;
   }
 
